test/fixtures/es-modules/tla/require-indented.snapshot
<project-root>/test/fixtures/es-modules/tla/tla-indented.mjs:4

  await Promise.resolve(ready);
  ^

<project-root>/test/fixtures/es-modules/tla/tla-indented.mjs:7

for await (const x of [Promise.resolve(1)]) {
^

Error [ERR_REQUIRE_ASYNC_MODULE]: require() cannot be used on an ESM graph with top-level await. Use import() instead.
Required module: <project-root>/test/fixtures/es-modules/tla/tla-indented.mjs
Require stack:
- <project-root>/test/fixtures/es-modules/tla/require-indented.js
    at <node-internal-frames>
    at <node-internal-frames> {
  code: 'ERR_REQUIRE_ASYNC_MODULE'
}

Node.js <node-version>
